2007-10-03 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/Spell.py: add gtkspell bug workaround, see eg issue 1272, 1091, ...

2007-10-03 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/PageView.py: correct bug not going to bookmark if no active person
	* src/DataViews/_MediaView.py:
	* src/DataViews/_RepositoryView.py:
	* src/DataViews/_SourceView.py:
	* src/DataViews/_EventView.py:
	* src/DataViews/_FamilyList.py:
	* src/DataViews/_PedigreeView.py:
	* src/DataViews/_PlaceView.py:
	* src/DataViews/_PersonView.py:
	* src/DataViews/_RelationView.py:
	after import, redraw bookmark menu

2007-10-03 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/DataViews/_PedigreeView.py: correctly load bookmarks, issue 1271
	* src/DataViews/_RelationView.py: correctly load bookmarks, issue 1271

2007-10-01 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/GrampsDb/_DbUtils.py: do deep copy of bookmarks from old to new db
	* src/GrampsDb/_GrampsXMLDB.py: in load_from: load correct bookmarks

2007-09-30  Stephane Charette <stephanecharette@gmail.com>
	* src/data/main*.css: 0001266: Narrative web report: gallery images
	don't show up correctly in IE7

2007-09-30  Gary Burton <gary.burton@zen.co.uk>
	* src/plugins/NarrativeWeb.py: 0001236: Narrative web report: If the event 
	has no date, there's no place (Issue #0001236)

2007-09-29  Alex Roitman  <shura@gramps-project.org>
	* data/grampsxml.rng: Add region to objref.
	* data/grampsxml.dtd: Add region to objref.

2007-09-29 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/GrampsDb/_ReadXML.py: read region tag in xml
	* src/GrampsDb/_WriteXML.py: output region tag in xml (=subsection of picture)
	* src/Editors/_EditMediaRef.py: make sure rectangle is none if nothing given

2007-09-29 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/GrampsDb/_ReadXML.py: remove bug: no more creation of objects if bookmark is found with